# extended-docx-mcp

./: .gitignore  README.md  pyproject.toml
doc/: examples-editing.md  examples-reading.md  examples-tables.md  limitations.md  plan.md
docs/: examples-editing.md  examples-mcp-client-config.md  examples-review.md  examples-tables.md  limitations.md  plan.md
scripts/: setup.bat  setup.ps1  setup.sh
src/: app.py  config.py  server.py
src/extended_docx_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ops/: __init__.py  document_ops.py  package_io.py  review_ops.py  structure_ops.py  text_ops.py
src/ops/review/: __init__.py  comments.py  revisions.py  xml_utils.py
src/toolsets/: __init__.py  content.py  meta.py  response_schema.py  review.py  sections.py  styles.py
src/toolsets/content_tools/: __init__.py  batch.py  discovery.py  editing.py  ranges.py  tables.py
src/toolsets/review_tools/: __init__.py  comments.py  revisions.py
tests/: __init__.py  conftest.py  fixture_builder.py  test_batch_and_ranges.py  test_content_editing.py  test_content_reading.py  test_review.py  test_sections.py  test_styles.py  test_tables.py
tests/fixtures/: complex.docx  fractional_paragraph_formatting.docx  fractional_sections.docx  simple.docx  table_before_target.docx  with_review.docx  with_sections.docx  with_styles.docx  with_tables.docx
tests/fixtures/.extended-docx-mcp-backups/: with_review-20260516-135223.docx  with_review-20260516-135227.docx
